@@ -3,7 +3,7 @@ handy_dictionary_ext_label=Handy Dictionary
 turnon_label=Turn On
 turnoff_label=Turn Off
 pref_label=Preferences
-cust_key_label=Configure Shortcuts
+cust_key_label=Customize Shortcuts
 howto_label=How to use?
 
 turnon_tooltip=Handy Dictionary: Click to Enable Temporary
