@@ -15,11 +15,12 @@ Handy Dictionary v0.6
 	- now css are extracted from response in order to display result in native look
 - auto close
 	- if selected pop-up will automatically close after specified time
-- enable/disable for website
-	- now user can enabled/disable tool for given website using statusbar and toolbar menu
 - status bar changes
 	- based on user feedback, add-on/status bar button is shortened and color-coding is used for current status
 	- for valid website/host one more button next to status button which can be used to enable/disable tool for given website
+	- now user can enabled/disable tool for given website using statusbar and toolbar menu
+- customize keyboard shortcuts
+	- now user can customize keyboard shortcuts using toolbar menu
 - popup changes for classic mode
 	- current dictionary label is displayed in title bar
 	- "Preferences" link is displayed on title of popup
